@@ -7,15 +7,15 @@ class TestCLob < Test::Unit::TestCase
 
   def setup
     @conn = get_oci8_connection
-    drop_table('test_clob')
-    @conn.exec('CREATE TABLE test_clob (filename VARCHAR2(40), content CLOB)')
+    drop_table('test_table')
+    @conn.exec('CREATE TABLE test_table (filename VARCHAR2(40), content CLOB)')
   end
 
   def test_insert
     filename = File.basename($lobfile)
-    @conn.exec("DELETE FROM test_clob WHERE filename = :1", filename)
-    @conn.exec("INSERT INTO test_clob(filename, content) VALUES (:1, EMPTY_CLOB())", filename)
-    cursor = @conn.exec("SELECT content FROM test_clob WHERE filename = :1 FOR UPDATE", filename)
+    @conn.exec("DELETE FROM test_table WHERE filename = :1", filename)
+    @conn.exec("INSERT INTO test_table(filename, content) VALUES (:1, EMPTY_CLOB())", filename)
+    cursor = @conn.exec("SELECT content FROM test_table WHERE filename = :1 FOR UPDATE", filename)
     lob = cursor.fetch[0]
     open($lobfile) do |f|
       while f.gets()
@@ -27,9 +27,9 @@ class TestCLob < Test::Unit::TestCase
 
   def test_insert_with_flush
     filename = File.basename($lobfile)
-    @conn.exec("DELETE FROM test_clob WHERE filename = :1", filename)
-    @conn.exec("INSERT INTO test_clob(filename, content) VALUES (:1, EMPTY_CLOB())", filename)
-    cursor = @conn.exec("SELECT content FROM test_clob WHERE filename = :1 FOR UPDATE", filename)
+    @conn.exec("DELETE FROM test_table WHERE filename = :1", filename)
+    @conn.exec("INSERT INTO test_table(filename, content) VALUES (:1, EMPTY_CLOB())", filename)
+    cursor = @conn.exec("SELECT content FROM test_table WHERE filename = :1 FOR UPDATE", filename)
     lob = cursor.fetch[0]
     lob.sync = false
     open($lobfile) do |f|
@@ -44,9 +44,9 @@ class TestCLob < Test::Unit::TestCase
   def test_insert_symbol
     filename = 'test_symbol'
     value = :foo_bar
-    @conn.exec("DELETE FROM test_clob WHERE filename = :1", filename)
-    @conn.exec("INSERT INTO test_clob(filename, content) VALUES (:1, EMPTY_CLOB())", filename)
-    cursor = @conn.exec("SELECT content FROM test_clob WHERE filename = :1 FOR UPDATE", filename)
+    @conn.exec("DELETE FROM test_table WHERE filename = :1", filename)
+    @conn.exec("INSERT INTO test_table(filename, content) VALUES (:1, EMPTY_CLOB())", filename)
+    cursor = @conn.exec("SELECT content FROM test_table WHERE filename = :1 FOR UPDATE", filename)
     lob = cursor.fetch[0]
     lob.write(value)
     lob.rewind
@@ -57,7 +57,7 @@ class TestCLob < Test::Unit::TestCase
   def test_read
     test_insert() # first insert data.
     filename = File.basename($lobfile)
-    cursor = @conn.exec("SELECT content FROM test_clob WHERE filename = :1 FOR UPDATE", filename)
+    cursor = @conn.exec("SELECT content FROM test_table WHERE filename = :1 FOR UPDATE", filename)
     lob = cursor.fetch[0]
 
     open($lobfile) do |f|
@@ -76,7 +76,7 @@ class TestCLob < Test::Unit::TestCase
   end
 
   def teardown
-    drop_table('test_clob')
+    drop_table('test_table')
     @conn.logoff
   end
 end
